--- a/v6.html
+++ b/v6.html
@@ -47,22 +47,19 @@
     </div>
   </div>
 
-  <div class="stats" id="stats">Initializing... <span id="loading">building alphabet — one moment</span></div>
+  <div class="stats" id="stats">Ready.</div>
   <div class="small">Notes: dynamic dictionary limited to 200 entries (single-byte index). Adjust `MAX_DICT_ENTRIES` in code if you want more (then token format must change).</div>
 
   <script type="module">
-    import { alphabetReady } from "./v6.js";
-
+    import "./v6.js";
     const inputEl = document.getElementById("input");
     const outputEl = document.getElementById("output");
     const keyEl = document.getElementById("key");
     const statsEl = document.getElementById("stats");
-    const loadingSpan = document.getElementById("loading");
     const encBtn = document.getElementById("encodeBtn");
     const decBtn = document.getElementById("decodeBtn");
 
     let suppress = false;
-    let initDone = false;
 
     function debounce(fn, ms = 220) {
       let t;
@@ -70,7 +67,6 @@
     }
 
     async function doEncodeUI() {
-      if (!initDone) { statsEl.textContent = "Still initializing alphabet — wait a moment."; return; }
       if (suppress) return;
       suppress = true;
       try {
@@ -89,7 +85,6 @@
     }
 
     async function doDecodeUI() {
-      if (!initDone) { statsEl.textContent = "Still initializing alphabet — wait a moment."; return; }
       if (suppress) return;
       suppress = true;
       try {
@@ -106,18 +101,6 @@
 
     const debouncedEncode = debounce(doEncodeUI, 380);
     const debouncedDecode = debounce(doDecodeUI, 380);
-
-    const markReady = () => {
-      if (initDone) return;
-      loadingSpan.textContent = "alphabet ready";
-      initDone = true;
-      setTimeout(() => loadingSpan.remove(), 800);
-      if (inputEl.value) debouncedEncode();
-    };
-
-    loadingSpan.textContent = "building alphabet — this can take 0.5–2s depending on CPU";
-    document.addEventListener("alphabet-ready", markReady, { once: true });
-    alphabetReady.then(markReady);
 
     function reEncode() {
       debouncedDecode();
